# signify

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  COPYING  Makefile  README-earthly.md  README.md  b64_pton.c  base64.c  base64.h  bcrypt_pbkdf.c  blowfish.c  build.earth  compat.h  crypto_api.c  crypto_api.h  cvs-files  explicit_bzero.c  explicit_bzero.h  ge25519_base.data  helper.c  meson.build  meson.options  mod_ge25519.c  ohash.c  ohash.h  pledge_noop.c  pledge_waive.c  sha2.c  sha2.h  signify.1  signify.c  smult_curve25519_ref.c  src-files  update-cvs-files  update-src-files  zsig.c
.github/workflows/: ci.yml
conf/: HAVE_GETEXECNAME.c  HAVE_PROGRAM_INVOCATION_SHORT_NAME.c  HAVE___PROGNAME.c
keys/: signifyportable.pub  signifyportable.pub.asc
libbsd/: arc4random.c  arc4random.h  chacha_private.h  progname.c  readpassphrase.c
libbsd/bsd/: stdlib.h  string.h
libbsd/bsd/sys/: cdefs.h
patches/: libbsd-0.8.2
patches/libbsd-0.8.1/: musl-support.patch
patches/libbsd-0.8.3/: musl-support.patch
regress/: cvs-files  run
